# moscautovote

./: README.md  package.json
.github/workflows/: build.yml
src/: App.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src/components/: EventPage.tsx  Heading.tsx  NewEntryDialog.tsx  NewSessionDialog.tsx  NoContent.tsx
