[package]
name = "moscautovote"
version = "0.0.2"
description = "A voting app for the upcoming Moscautofestival"
authors = ["Nathan Waltz <waltznr@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "path-all", "dialog-save", "fs-read-file", "fs-write-file", "dialog-open", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
